--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,9 @@
-title: default-project-template
+title: Create a navigation bar
 hero_image: images/banner.png
-description: default-project-template description
+description: Create a bar of navigation links
 version: 4
 listed: false
 copyedit: false
 last_tested: "2022-05-19"
 steps:
-  - title: Introduction
-  - title: Step title
-  - title: What next?
+  - title: Create a top navigation bar
